--- a/public/js/app/users/views/index.html
+++ b/public/js/app/users/views/index.html
@@ -59,8 +59,9 @@
                       <th>email</th>
                       <th>Rol</th>
                       <th>Tienda</th>
-                      <th style="width: 40px">Editar</th>
-                      <th style="width: 40px">Eliminar</th>
+                      <th>Editar</th>
+                      <th >Opción</th>
+                      <th >Eliminar</th>
                     </tr>
                     
                     <tr ng-repeat="row in users">
@@ -72,7 +73,9 @@
                         <td ng-if="row.role_id == '2'">Cajero</td>
                         <td ng-if="row.role_id == 3">Visitante</td>
                       <td>{{row.store.nombreTienda}}</td>
+
                       <td><a ng-click="editUser(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                        <td><a ng-click="" class="btn bg-purple-active color-palette btn-xs">Deshabilitar</a></td>
                       <td><a ng-click="deleteUser(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
                       
                     </tr>
