--- a/public/js/app/cashes/views/index.html
+++ b/public/js/app/cashes/views/index.html
@@ -16,9 +16,12 @@
 
         <!-- Main content -->
         <section class="content">
-        <div class="row">
+        <div class="row" ng-show="banderaAbrirCaja">
         <div class="col-md-12">
-          <a ng-href="{{ruta}}" ng-click="verCaja()" target="_self" type="submit" class="btn btn-primary pull-left">Ver Caja Diaria</a>
+          <a ng-if="!bandera" ng-href="{{ruta}}" target="_self" type="submit" class="btn btn-primary pull-left">Ver Caja Diaria</a>
+          </div>
+          <div class="col-md-12">
+          <a ng-if="bandera" data-toggle="modal" data-target="#miventana1" target="_self" type="submit" class="btn btn-primary pull-left">Crear Caja Diaria</a>
           </div>
         </div>
         </br>
@@ -29,7 +32,24 @@
               <div class="box">
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">Cajas Diarias</h3>
+
+                  <div class="row">
+                    <div class="col-md-4">
+                      <div class="form-group" >
+                        <select class="form-control" name="" ng-model="stores.id" ng-click="mostrarCajas()" ng-options="item.id as item.nombreTienda for item in stores">
+                          <option value="">--Elije Tienda--</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group" >
+                          <select class="form-control" name="" ng-model="cash.cashHeader_id" ng-options="item.id as item.nombre for item in cashHeaders" ng-click="cargarCajasDiarias()">
+                          <option value="">--Elije Caja--</option>
+                          </select>
+                        </div>
+                    </div>
+                  </div>
+
                   <div class="box-tools">
                   <form ng-keyup="searchcash()">
                     <div class="input-group" style="width: 200px;">
@@ -98,3 +118,40 @@
             </div>  
           </div>
         </section>
+
+
+          <!-- =========================================Ventana Agregar Año=================================-->
+         <div class="container"  style="margin-top: 60px;">
+           <div  class="modal fade" id="miventana1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="ngenabled">
+             <div  class="modal-dialog">
+                  <div style="border-radius: 5px" class="modal-content">
+                        <div class="modal-header" >
+                    
+                          <h4 class="modal-title">Crear Caja</h4>
+                        </div>
+                        <!--=================cueropo========================-->
+                         <div class="modal-body">
+                         <div class="row">
+                          <div class="col-md-12">
+                            <div class="form-group" ng-class="{true: 'has-error'}[ cashCreateForm.montoInicial.$error.required && cashCreateForm.$submitted || cashCreateForm.montoInicial.$dirty && cashCreateForm.montoInicial.$invalid]">
+                            <label for="montoInicial">Monto Inicial</label>
+                            <input type="number" class="form-control ng-pristine ng-valid ng-touched" name="montoInicial" placeholder="0.00" ng-model="cash.montoInicial" ng-blur="calculateSuppPric()" step="0.1">
+                              <label ng-show="cashCreateForm.$submitted || cashCreateForm.montoInicial.$dirty && cashCreateForm.montoInicial.$invalid">
+                              <span ng-show="cashCreateForm.montoInicial.$error.required"><i class="fa fa-times-circle-o"></i>Requerido.</span>
+                              </label>
+                            </div>
+                          </div>
+                          </div>
+                   
+                          </div>
+
+                        <!--================================================-->
+                        <div class="modal-footer" >
+                          <button type="submit" class="btn btn-primary" data-dismiss="modal" ng-click="createcash()">Abrir</button>
+                          <a  class="btn btn-danger" data-dismiss="modal" aria-hidden="ngenabled">Salir</a>
+                      </div>
+
+                  </div>
+              </div>
+            </div>
+          </div>
