--- a/public/js/app/orderPurchases/views/index.html
+++ b/public/js/app/orderPurchases/views/index.html
@@ -122,7 +122,7 @@
          <!-- =======================================================================================================Ventana Emergente Crear=================================-->
         <div class="container"  style="margin-top: 60px;">
            <div  class="modal fade" id="miventana" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="ngenabled">
-             <div  class="modal-dialog">
+             <div  class="modal-dialog modal-lg">
                <div style="border-radius: 5px" class="modal-content">
                  <div class="modal-header" style="border-radius: 5px" >
                    <button type="button"  class="close" data-dismiss="modal" aria-hidden="ngenabled"> &times; </button>
@@ -162,7 +162,7 @@
             
             <div class="box-body">
               <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                       <table class="">
 
                     <tr>
@@ -217,7 +217,7 @@
                     <button class=" label-default" type='submit' ng-click='editPayment()' >Edit Pago</button>  
             </div>
               </div>
-              <div class="col-md-8" align="center">
+              <div class="col-md-9" align="center">
                 
                   <table class="table table-striped" >
                     <tr>
