--- a/public/js/app/orderPurchases/views/index.html
+++ b/public/js/app/orderPurchases/views/index.html
@@ -163,13 +163,13 @@
             <div class="box-body">
               <div class="row">
                 <div class="col-md-3">
-                      <table class="">
+                  <table class="">
 
-                    <tr>
-                      <th >Fecha</th>
-                    </tr>
-                    <tr>
-                      <td> 
+                         <tr>
+                           <th >Fecha</th>
+                         </tr>
+                         <tr>
+                            <td> 
                             
                                 <div  class="input-group">
                                         <div class="input-group-addon">
@@ -177,24 +177,22 @@
                                         </div>
                                       <input  type="date"   class="form-control input-sm" name="fecha" ng-model="detPayment.fecha" >
                                    </div>   
-                                  
-                            
-                      </td>
-                    </tr>
-                    <tr>
-                      <th >Tipo de Pago</th>
-                      </tr>
-                    <tr>
-                      <td ><div class="form-group" ng-class="{true: 'has-error'}[ paymentCreateForm.warehouse.$error.required && paymentCreateForm.$submitted || paymentCreateForm.warehouse.$dirty && paymentCreateForm.warehouse.$invalid]">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th >Tipo de Pago</th>
+                        </tr>
+                        <tr>
+                            <td ><div class="form-group" ng-class="{true: 'has-error'}[ paymentCreateForm.warehouse.$error.required && paymentCreateForm.$submitted || paymentCreateForm.warehouse.$dirty && paymentCreateForm.warehouse.$invalid]">
                        
-                       <select ng-hide="show" class="form-control input-sm" name="warehouse" ng-click="" ng-model="detPayment.methodPayment_id" ng-options="item.id as item.nombre for item in methodPayments" required>
-                       <option value="">--Elija Modo de Pago--</option>
-                       </select>
-                       <label ng-show="paymentCreateForm.$submitted || paymentCreateForm.warehouse.$dirty && paymentCreateForm.warehouse.$invalid">
+                               <select ng-disabled="detPayment.cashe_id>0 || payment.cajamensual==true" ng-hide="show" class="form-control input-sm" name="warehouse" ng-click="" ng-model="detPayment.methodPayment_id" ng-options="item.id as item.nombre for item in methodPayments" >
+                               <option value="">--Elija Modo de Pago--</option>
+                               </select>
+                               <label ng-show="paymentCreateForm.$submitted || paymentCreateForm.warehouse.$dirty && paymentCreateForm.warehouse.$invalid">
                                 <span ng-show="paymentCreateForm.warehouse.$invalid"><i class="fa fa-times-circle-o"></i>Requerido.</span>
-                      </label>
-                       
-                    </div></td>
+                               </label>
+                              </div>
+                            </td>
                     </tr>
                     <tr>
                       <th >Monto</th>
@@ -202,21 +200,66 @@
                     <tr>
                       <td>
                          <div class="form-group" ng-class="{true: 'has-error'}[ paymentCreateForm.montoPagando.$error.required && paymentCreateForm.$submitted || paymentCreateForm.montoPagando.$dirty && paymentCreateForm.montoPagando.$invalid]" >
-                       <input type="number" class="form-control" ng-model='detPayment.montoPagado' ng-blur='recalPayments()' name="montoPagando" placeholder="0.00"  step="0.1" required>
-                      <label ng-show="paymentCreateForm.$submitted || paymentCreateForm.montoPagando.$dirty && paymentCreateForm.montoPagando.$invalid">
+                          <input type="number" class="form-control" ng-model='detPayment.montoPagado' ng-blur='recalPayments()' name="montoPagando" placeholder="0.00"  step="0.1" required>
+                          <label ng-show="paymentCreateForm.$submitted || paymentCreateForm.montoPagando.$dirty && paymentCreateForm.montoPagando.$invalid">
                                 <span ng-show="paymentCreateForm.montoPagando.$invalid"><i class="fa fa-times-circle-o"></i>Requerido.</span>
-                      </label>
-                     </div>
+                         </label>
+                        </div>
                       </td>
                     </tr>
-                </table>
-                  <div ng-hide="mostrarBtnGEd" class="form-group" >
-                     <button class=" label-default" ng-click='createPayment(row)'>Agregar Pago</button>
+                <tr >
+                      <th >Pagar Con Caja</th>
+                </tr>
+                <tr>
+                
+               <td  ng-hide="payment.cajamensual">
+                <div class="form-group" ng-class="{true: 'has-error'}[ paymentCreateForm.warehouse.$error.required && paymentCreateForm.$submitted || paymentCreateForm.warehouse.$dirty && paymentCreateForm.warehouse.$invalid]">
+                       <select   ng-disabled="detPayment.methodPayment_id>0 || check==true || payment.cajamensual==true" ng-click="TraerSales(detPayment.cashe_id)" class="form-control" name="warehouse"  ng-model="detPayment.cashe_id" ng-options="item.id as item.nombre for item in cashHeaders" >
+                       <option value="">--Elija Caja--</option>
+                       </select>
+                       <label ng-show="paymentCreateForm.$submitted || paymentCreateForm.warehouse.$dirty && paymentCreateForm.warehouse.$invalid">
+                                <span ng-show="paymentCreateForm.warehouse.$invalid"><i class="fa fa-times-circle-o"></i>Requerido.</span>
+                       </label>
+                  </div>
+                       <label>{{cashes.montoBruto}}</label>
+                 
+                 </td>
+               </tr>
+              <tr>
+                      <th >Caja Mensual</th>
+                </tr>
+                <tr>
+                     <td>
+                       <div   class="form-group" >                            
+                            <input  ng-disabled="detPayment.methodPayment_id>0 || check==true || detPayment.cashe_id>0" type="checkbox"  ng-click="cashmontly()" name="variantes" ng-model="payment.cajamensual" />
+                            <span class="text-info"> <em>Pagar con caja mensual</em></span>
+                        </div>
+          
+                     </td>
+                </tr>
+                <tr ng-show="payment.cajamensual">
+                      <th >Descripcion</th>
+                </tr>
+                <tr>
+                <td ng-show="payment.cajamensual">
+                   <div class="form-group" >
+                        <textarea ng-model="payment.descripcion" class="form-control input-lg">
+                         </textarea>
+                    </div>
+                
+               </td>
+              </tr>
+      
+           <tr>
+                 <div ng-hide="mostrarBtnGEd" class="form-group" >
+                     <button class=" label-default" ng-click='createPayment()'>Agregar Pago</button>
                   </div>
                   <div  ng-show="mostrarBtnGEd" class="form-group" >
                     <button class=" label-default" type='submit' ng-click='editPayment()' >Edit Pago</button>  
-            </div>
+                 </div>
+          </tr></table>
               </div>
+              
               <div class="col-md-9" align="center">
                 
                   <table class="table table-striped" >
@@ -229,8 +272,12 @@
                     </tr>
                     
                     <tr ng-repeat="row in detPayments">
+                      <td ng-hide="true">@{{row.id}}</td>
+                      <td ng-hide="true">{{row.cashID}}</td>
                       <td>{{row.fecha}}</td>
-                      <td>{{row.nameMethod}}</td>
+                      <td ng-if="row.nameMethod!=null">{{row.nameMethod}}</td>
+                      <td ng-if="row.detCash_id>0">{{row.detCash_id}}</td>
+                      <td ng-if="row.cashMonthly_id>0">{{row.cashMonthly_id}}</td>
                       <td>{{row.montoPagado}}</td>
                       <td ><span class="badge bg-blue">{{row.tipoPago}}</span></td> 
                       <td><button type="button" class="btn btn-danger btn-xs"  ng-click="destroyPay(row)">
