--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -73,8 +73,8 @@
                     <tr ng-repeat="row in products">
                       <td>{{$index + 1}}</td>
 
-                      <td>{{row.proCodigo }}</td>
-                      <td><a ng-href="/products/show/{{row.proId}}">{{row.proNombre}}</a></td>
+                      <td><a ng-href="/products/show/{{row.proId}}">{{row.proCodigo }}</a></td>
+                      <td>{{row.proNombre}}</td>
                         <td>{{row.detPresPri}}</td>
                       <td>{{row.braNombre}}</td>
                       <td>{{row.typNombre}}</td>
