--- a/public/js/app/cashes/views/index.html
+++ b/public/js/app/cashes/views/index.html
@@ -86,7 +86,7 @@
                       <th>Descuadre</th>
                       <th>Estado</th>
                       <th style="width: 40px">Editar</th>
-                      <th style="width: 40px">Eliminar</th>
+
                     </tr>
                     
                     <tr ng-repeat="row in cashes">
@@ -100,8 +100,9 @@
                       <td>{{row.descuadre}}</td>
                       <td ng-if="row.estado1==0">Caja Cerrada</td>
                       <td ng-if="row.estado1==1">Caja Abierta</td>
-                      <td><a ng-click="editcash(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                      <td><a ng-click="deletecashHeader(row)" class="btn btn-danger btn-xs">Eliminar</a></td>                      
+                      <td ng-if="row.estado1==0"><a ng-click="editcash(row)" class="btn btn-info btn-xs">Ver</a></td>
+                        <td ng-if="row.estado1==1"><a ng-click="editcash(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                      <!--<td><a ng-click="deletecashHeader(row)" class="btn btn-danger btn-xs">Eliminar</a></td>-->
                     </tr>                   
                   </table>
 
