--- a/public/js/app/separateSales/views/index.html
+++ b/public/js/app/separateSales/views/index.html
@@ -70,15 +70,21 @@
                       <th>Estado Venta</th>
                       <th style="width: 40px">Detalle</th>
                     </tr>
-                    
+
+
+
                     <tr ng-repeat="row in separateSales">
                       <td>{{$index + 1}}</td>
                       <td>{{row.fechaPedido}}</td>
-                      <td>{{row.fechaAnulado}}</td> 
+                      <td ng-if="row.fechaAnulado == '0000-00-00 00:00:00'">-</td>
+                      <td ng-if="row.fechaAnulado != '0000-00-00 00:00:00'">{{row.fechaAnulado}}</td>
                       <td>{{row.montoTotal}}</td>                      
                       <td>{{row.customer.nombres+' '+row.customer.apellidos+' - '+row.customer.empresa}}</td>
                       <td>{{row.employee.nombres+' '+row.employee.apellidos}}</td>
-                      <td>{{row.estado==1? 'Por Entregar':row.estado==0? 'Entregado':'Anulado'}}</td>
+                      <td ng-if="row.estado==1"><span style="color: yellow;">Pag. sin entre.</span></td>
+                      <td ng-if="row.estado==0"><span style="color: cornflowerblue;">Pend. sin entre.</span></td>
+                      <td ng-if="row.estado==2"><span style="color: green;">Pag y entre.</span></td>
+                      <td ng-if="row.estado==3"><span style="color: red;">Anulado</span></td>
                       <td>{{row.estadoPago==1? 'Credito':'Contado'}}</td>
                       <td><a ng-click="editseparate(row)" class="btn btn-warning btn-xs">Ver</a></td>
                       
