--- a/public/report/TiketVariante.jrxml
+++ b/public/report/TiketVariante.jrxml
@@ -4,11 +4,8 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="idVariante" class="java.lang.String"/>
-	<parameter name="cant" class="java.lang.Integer">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
 	<queryString>
-		<![CDATA[call principal2($P{idVariante},$P{cant});]]>
+		<![CDATA[call principal2($P{idVariante});]]>
 	</queryString>
 	<field name="id" class="java.lang.Long">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -96,12 +93,6 @@
 				<reportElement x="35" y="15" width="80" height="84" uuid="0459eea6-7a56-42fb-9526-9ee401cde13e"/>
 				<imageExpression><![CDATA["/usr/share/nginx/html/salesfly/public/"+$F{image}]]></imageExpression>
 			</image>
-			<componentElement>
-				<reportElement x="339" y="43" width="85" height="49" uuid="31a666db-2391-4155-bff8-6649f94049e1"/>
-				<jr:Code128 xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" textPosition="bottom">
-					<jr:codeExpression><![CDATA[$F{sku}]]></jr:codeExpression>
-				</jr:Code128>
-			</componentElement>
 			<textField>
 				<reportElement x="386" y="24" width="38" height="20" uuid="c8b09905-8fa5-463e-ae0b-b3d12016ba5f"/>
 				<textElement>
@@ -115,6 +106,10 @@
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Talla}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="329" y="69" width="100" height="20" uuid="380588a3-e769-477c-b7dc-a9538ea4b601"/>
+				<textFieldExpression><![CDATA[$F{sku}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
