--- a/public/js/app/separateSales/views/index.html
+++ b/public/js/app/separateSales/views/index.html
@@ -1,12 +1,12 @@
 <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            Separados Ventas
+            Lista de PEDIDOS/SEPARADOS
             <small>Panel de Control</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Separados Ventas</li>
+            <li class="active">Pedid/Separ</li>
           </ol>
 
           
@@ -18,7 +18,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/separateSales/create" type="submit" class="btn btn-primary pull-left">Separar</a> 
+          <a href="/separateSales/create" type="submit" class="btn btn-primary pull-left">Crear Ped/Sep</a>
           </div>
         </div>
         </br>
